syntax = "proto3";

package gedorinku.tsugidoko_server;

option go_package = "github.com/gedorinku/tsugidoko-server/api;api_pb";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "class_rooms.proto";

service BeaconService {
  rpc ListBeacons (ListBeaconsRequest) returns (ListBeaconsResponse) {
    option (google.api.http) = {
      get: "/beacons"
    };
  }
  rpc GetBeacon (GetBeaconRequest) returns (Beacon) {
    option (google.api.http) = {
      get: "/beacons/{bssid}"
    };
  }
  rpc CreateBeacon (CreateBeaconRequest) returns (Beacon) {
    option (google.api.http) = {
      post: "/beacons"
      body: "beacon"
    };
  }
  rpc UpdateBeacon (UpdateBeaconRequest) returns (Beacon) {
    option (google.api.http) = {
      patch: "/beacons/{beacon.bssid}"
      body: "beacon"
    };
  }
  rpc DeleteBeacon (DeleteBeaconRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/beacons/{bssid}"
    };
  }
}

message Beacon {
  string bssid = 1;
  ClassRoom class_room = 2;
}

message ListBeaconsRequest {
}

message ListBeaconsResponse {
  repeated Beacon beacons = 1;
}

message GetBeaconRequest {
  string bssid = 1;
}

message CreateBeaconRequest {
  Beacon beacon = 1;
}

message UpdateBeaconRequest {
  Beacon beacon = 1;
}

message DeleteBeaconRequest {
  string bssid = 1;
}
