syntax = "proto3";

package gedorinku.tsugidoko_server;

option go_package = "github.com/gedorinku/tsugidoko-server/api;api_pb";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service UserPositionService {
  rpc ListUserPositions (ListUserPositionsRequest) returns (ListUserPositionsResponse) {
    option (google.api.http) = {
      get: "/user_positions"
    };
  }
  rpc GetUserPosition (GetUserPositionRequest) returns (UserPosition) {
    option (google.api.http) = {
      get: "/user_positions/{user_position_id}"
    };
  }
  rpc CreateUserPosition (CreateUserPositionRequest) returns (UserPosition) {
    option (google.api.http) = {
      post: "/user_positions"
      body: "user_position"
    };
  }
  rpc UpdateUserPosition (UpdateUserPositionRequest) returns (UserPosition) {
    option (google.api.http) = {
      patch: "/user_positions/{user_position.user_position_id}"
      body: "user_position"
    };
  }
  rpc DeleteUserPosition (DeleteUserPositionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user_positions/{user_position_id}"
    };
  }
}

message UserPosition {
  string user_position_id = 1;
}

message ListUserPositionsRequest {
}

message ListUserPositionsResponse {
  repeated UserPosition user_positions = 1;
}

message GetUserPositionRequest {
  string user_position_id = 1;
}

message CreateUserPositionRequest {
  UserPosition user_position = 1;
}

message UpdateUserPositionRequest {
  UserPosition user_position = 1;
}

message DeleteUserPositionRequest {
  string user_position_id = 1;
}
